--- a/css/Home.css
+++ b/css/Home.css
@@ -825,12 +825,11 @@ body {
 }
 
 #Home_Page .container:first-child {
-  background: url(../img/Website_clipart_arts/art_design/1.png),
-    url(../img/Website_clipart_arts/art_design/2.png);
-  background-repeat: no-repeat, no-repeat;
-  background-position-y: 8%, 4%;
-  background-position-x: 55%, 99%;
-  background-size: 4%, 12%;
+  background: url(../img/Website_clipart_arts/art_design/2.png);
+  background-repeat: no-repeat;
+  background-position-y: 4%;
+  background-position-x: 99%;
+  background-size: 12%;
 }
 
 #Take_Consistent_Income {
@@ -3050,378 +3049,3 @@ Tredcode Carousel
     font-size: medium;
   }
 }
-
-/* ---------------
-Horizontal Scroll 
------------------*/
-
-/* main::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
-  border-radius: 10px;
-}
-main::-webkit-scrollbar {
-  width: 10px;
-  background-color: #f5f5f5;
-}
-main::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    color-stop(0.44, rgb(122, 153, 217)),
-    color-stop(0.72, rgb(73, 125, 189)),
-    color-stop(0.86, rgb(28, 58, 148))
-  );
-}
-#layoutbox {
-  height: 100%;
-}
-body.horizontal main {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  height: calc(95vh - 20em);
-} */
-/* main {
-  padding: 1em var(--gap);
-  overflow-y: auto;
-  display: flex;
-} */
-/* body.horizontal main > * {
-  min-width: 1000px;
-  padding-left: var(--gap);
-  margin-right: var(--gap);
-  margin-top: 4em;
-  flex-shrink: 0;
-  align-self: center;
-}
-body.horizontal main > services {
-  margin-right: 0;
-}
-services > ul {
-  display: flex;
-  width: auto;
-  list-style: none;
-  align-items: center;
-  height: 100%;
-  padding: 0;
-}
-services > ul > li {
-  display: block;
-  flex-shrink: 0;
-  align-items: center;
-  padding-right: 9em;
-  padding-left: 0;
-}
-li.fixed {
-  position: -webkit-sticky !important;
-  position: sticky !important;
-  bottom: 0;
-}
-services figure {
-  width: 520px;
-  position: relative;
-  margin: 0;
-  z-index: 5;
-}
-services li:nth-child(1) figure > a {
-  background: linear-gradient(112.73deg, #f5cb52 12.53%, #fa6e7f 80.43%);
-}
-services figure > a {
-  display: flex;
-  width: 100%;
-  height: auto;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(112.73deg, #f1eef3 12.53%, #f5f3f8 80.43%);
-  margin-bottom: 1em;
-}
-services a {
-  color: inherit;
-  text-decoration: none;
-  transition: all 0.125s ease-in;
-  cursor: pointer;
-}
-services figure a img {
-  width: 100%;
-  font-size: 0;
-}
-services figcaption {
-  display: block;
-  padding: 12% 5% 15% 15%;
-  font-weight: 600;
-  margin: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 80%;
-}
-services h2 {
-  text-transform: uppercase;
-  font-size: 2.35em;
-  font-weight: 800;
-  max-width: 13ch;
-  margin-bottom: 16px;
-}
-services figcaption p {
-  max-width: 20ch;
-  font-size: 1.3em;
-  line-height: 1.3;
-  margin: 0;
-} */
-
-/* --------------------
-Horizontal Scrolling 1 
---------------------- */
-/* #ocean_wave {
-  position: relative;
-}
-.ocean {
-  height: 5%;
-  width: 100%;
-  position: relative;
-  color: #93a1e6;
-}
-.wave {
-  background: url(../img/wave.svg) repeat-x;
-  position: absolute;
-  width: 6400px;
-  height: 200px;
-  animation: wave_1 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
-  transform: translate3d(0, 0, 0);
-  z-index: 0;
-}
-.content {
-  z-index: 1;
-  bottom: 5%;
-}
-@keyframes wave_1 {
-  0% {
-    margin-left: 0;
-  }
-  100% {
-    margin-left: -1600px;
-  }
-} */
-
-/* -----------------------------
-Plain Horizontal scroll (OUTER) 
------------------------------ */
-/* .outer {
-  width: 100%;
-  height: 200px;
-  white-space: nowrap;
-  position: relative;
-  overflow-x: auto;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
-}
-.outer div {
-  width: 33.33%;
-  height: 90%;
-  margin: 0 0.25%;
-  display: inline-block;
-  zoom: 1;
-} */
-
-/* --------------------
-Horizontal Scrolling 2 
---------------------- */
-/* .horizontal-scroll-wrapper::-webkit-scrollbar {
-  width: 2px;
-  height: 2px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  background-color: #f5f5f5;
-}
-.horizontal-scroll-wrapper::-webkit-scrollbar-button {
-  width: 2px;
-  height: 2px;
-}
-.horizontal-scroll-wrapper::-webkit-scrollbar {
-  width: 12px;
-  background-color: #f5f5f5;
-}
-.horizontal-scroll-wrapper::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #d62929;
-}
-
-
-#Horizontal_Scrolling_2 {
-  position: relative;
-  width:auto !important;
-  height: auto !important;
-}
-.horizontal-scroll-wrapper {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 80px;
-  height: 500px;
-  max-height: 5000px;
-  margin: 0;
-  background: #abc;
-  overflow-y: auto;
-  overflow-x: hidden;
-  transform: rotate(-90deg) translateY(-80px);
-  transform-origin: right top;
-}
-.horizontal-scroll-wrapper > div {
-  display: block;
-  padding: 5px;
-  background: #cab;
-  transform: rotate(90deg);
-  transform-origin: right top;
-}
-.rectangles {
-  top: 100px;
-  padding: 100px 0 0 0;
-}
-.rectangles > div {
-  width: 140px;
-  height: 60px;
-  margin: 50px 10px;
-  padding: 5px;
-  background: #cab;
-  transform: rotate(90deg) translateY(80px);
-  transform-origin: right top;
-} */
-
-/* --------------------
-Horizontal Scrolling 3 
---------------------- */
-/* #Horizontal_Scrolling_3 {
-  width:100%;
-  white-space: nowrap;
-  overflow-x: scroll;
-  border:1px solid blue;
-}
-#Horizontal_Scrolling_3 ul {
-  list-style-type:none;
-  margin-left: 85px;
-  position: inherit;
-}
-#Horizontal_Scrolling_3 ul li {
-  border:1px solid black;
-  display:inline-block;
-  width:150px;
-}
-#Horizontal_Scrolling_3 ul #first_li {
-  position: fixed;
-  margin-left: -85px;
-  background-color: white;
-  color:red;
-} */
-
-/* --------------
-sticky_container
--------------- */
-/* .sticky-container main {
-  overflow-x: hidden;
-  display: flex;
-  position: sticky;
-  top: 0;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
-}
-
-.sticky-container section {
-  min-width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4ch;
-} */
-
-/* .sticky-container section:nth-child(even) {
-  background-color: teal;
-  color: white;
-} */
-
-/* -------------------------------- 
-Horizontal Scroll from GreenSock 1
--------------------------------  */
-/* .massiveImage {
-  height: 50vh;
-  width: 50vw;
-  background-size: cover; 
-  background-position: center; 
-}
-.header-section {
-  padding-bottom: 5vh;
-  margin-bottom: 0;
-} */
-
-/* -------------------------------- 
-Horizontal Scroll from GreenSock 2
--------------------------------  */
-/* .panel pre.prettyprint {
-  font-size: 20px;
-  text-align: left;
-  width: auto;
-  font-weight: normal;
-  margin: 10px;
-  border: none;
-}
-.prettyprint .linenums {
-  padding: 0;
-  list-style: none;
-}
-.prettyprint ol li {
-  background-color: black;
-}
-
-.panel.red .prettyprint .linenums > li:nth-child(n + 7):nth-child(-n + 9),
-.panel.gray .prettyprint .linenums > li:nth-child(10),
-.panel.purple .prettyprint .linenums > li:nth-child(4),
-.panel.green .prettyprint .linenums > li:nth-child(n + 6):nth-child(-n + 10) {
-  background-color: #222;
-}
-
-.box {
-  width: 100px;
-  height: 80px;
-  text-align: center;
-  line-height: 80px;
-  background-color: white;
-  border-radius: 8px;
-  color: #222;
-  font-weight: 700;
-  margin-left: 20px;
-  will-change: transform;
-}
-.box.active {
-  background-color: orange;
-  border: 2px solid white;
-}
-.description,
-.final {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  min-height: fit-content;
-}
-
-#container {
-  width: 400%;
-  height: 100%;
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.panel {
-  font-weight: 300;
-}
-
-div.pin-spacer {
-  padding: 0 !important;
-} */
-
