--- a/css/Home.css
+++ b/css/Home.css
@@ -3084,11 +3084,10 @@ WHAT U R GOING TO LEARN IN TCI
 .contextWillLearn .cardsContainer .willLearnCard[data-v-4ce558de],
 .contextWillLearn .cardsContainerMob .willLearnCard[data-v-4ce558de] {
   width: 385px;
-  height: 340px;
   padding: 30px 10px 30px 30px;
   margin: 10px;
   background-color: #e1e1ff;
-  border-left: 8px solid #081452;
+  border-left: 8px solid #2238a7;
   border-radius: 10px;
 }
 
@@ -3133,7 +3132,7 @@ WHAT U R GOING TO LEARN IN TCI
   font-size: 1.125rem;
   font-weight: 400;
   line-height: 27px;
-  color: #3a4392;
+  color: rgb(51, 51, 107);
 }
 
 .contextWillLearn .cardsContainer .willLearnCard .pointsHead[data-v-4ce558de],
@@ -3145,7 +3144,7 @@ WHAT U R GOING TO LEARN IN TCI
   font-size: 1rem;
   font-weight: 600;
   line-height: 35px;
-  color: #081452;
+  color: #324ed4;
 }
 
 .contextWillLearn .cardsContainer .willLearnCard .points[data-v-4ce558de],
@@ -3197,7 +3196,7 @@ WHAT U R GOING TO LEARN IN TCI
   .title[data-v-4ce558de] {
   font-size: 1rem;
   font-weight: 500;
-  color: #3a4392;
+  color: rgb(51, 51, 107);
 }
 
 @media (max-width: 62.25em) {
